<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/foto_barang"
                android:layout_width="160dp"
                android:layout_height="92dp"
                android:background="@drawable/placeholder"></ImageView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="126dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_fav">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/fav_no"></ImageView>

                <ImageView
                    android:id="@+id/fav_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/fav_yes"></ImageView>

            </RelativeLayout>

            <LinearLayout
                android:layout_below="@id/foto_barang"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nama_barang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:textSize="11dp"
                    android:lineHeight="12dp"
                    android:textColor="@color/tanigreen_2"
                    android:textStyle="bold"
                    android:text="@string/placeholder_nama"></TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:lineHeight="12dp"
                        android:textStyle="bold"
                        android:textColor="@color/tani_black"
                        android:text="@string/currency"></TextView>
                    <TextView
                        android:id="@+id/harga_barang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:lineHeight="12dp"
                        android:textStyle="bold"
                        android:textColor="@color/tani_black"
                        android:text="@string/placeholder_angka"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="9dp"
                    android:orientation="horizontal">
                    <RatingBar
                        android:id="@+id/ratingBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/RatingBar"
                        style="?android:attr/ratingBarStyleSmall"></RatingBar>

                    <TextView
                        android:id="@+id/txtRatingBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9dp"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/tanigray_2"
                        android:textSize="9dp"
                        android:lineHeight="12dp"
                        android:text="@string/placeholder_angka"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/location"></ImageView>
                    <TextView
                        android:id="@+id/locationBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:textSize="10dp"
                        android:lineHeight="12dp"
                        android:textColor="@color/tanigray_2"
                        android:text="@string/placeholder_nama"></TextView>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>